Fixing pagination spacing and alignement

--- a/web-ui/app/scss/styles.scss
+++ b/web-ui/app/scss/styles.scss
@@ -34,7 +34,7 @@
     z-index: 1;
     li {
       display: inline-block;
-      margin: 0 -3px;
+      margin: 1px -3px;
       vertical-align: top;
       input[type=checkbox] {
         @include check-box;
@@ -68,7 +68,11 @@
 
     #pagination-trigger {
       cursor: pointer;
-      margin: 0 5px;
+      margin: 4px 12px 0 5px;
+
+      span {
+        padding-left: 5px;
+      }
     }
   }
 }
@@ -347,6 +351,7 @@ section {
 /* ACTIONS */
 #refresh-mails-trigger {
   i {
+    margin-top: 3px;
     cursor: pointer;
     opacity: 0.9;
     padding: 4px;
